# Yix_Motorhand

./: README.md
test1/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
test1/components/core/: CMakeLists.txt
test1/components/core/include/: AS5600.h  CurrentLoop.h  FOC.h  OpenLoop.h  PWMManager.h  PowerLoop.h  SingleShuntSampler.h  SpeedLoop.h  lowpassfilter.h  pid.h
test1/components/core/src/: AS5600.cpp  CurrentLoop.cpp  FOC.cpp  OpenLoop.cpp  PWMManager.cpp  PowerLoop.cpp  SingleShuntSampler.cpp  SpeedLoop.cpp  lowpassfilter.cpp  pid.cpp
test1/main/: CMakeLists.txt  main.cpp
